Add Product and Listing Operations

--- a/StockTracking/StockTracking/StockTracking.csproj
+++ b/StockTracking/StockTracking/StockTracking.csproj
@@ -58,6 +58,7 @@
     <Compile Include="BLL\CategoryBLL.cs" />
     <Compile Include="BLL\CustomerBLL.cs" />
     <Compile Include="BLL\IBLL.cs" />
+    <Compile Include="BLL\ProductBLL.cs" />
     <Compile Include="DAL\CATEGORY.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
@@ -67,6 +68,7 @@
     <Compile Include="DAL\DAO\CategoryDAO.cs" />
     <Compile Include="DAL\DAO\CustomerDAO.cs" />
     <Compile Include="DAL\DAO\IDAO.cs" />
+    <Compile Include="DAL\DAO\ProductDAO.cs" />
     <Compile Include="DAL\DAO\StockContext.cs" />
     <Compile Include="DAL\DataModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -87,6 +89,8 @@
     <Compile Include="DAL\DTO\CategoryDTO.cs" />
     <Compile Include="DAL\DTO\CustomerDetailDTO.cs" />
     <Compile Include="DAL\DTO\CustomerDTO.cs" />
+    <Compile Include="DAL\DTO\ProductDetailDTO.cs" />
+    <Compile Include="DAL\DTO\ProductDTO.cs" />
     <Compile Include="DAL\PRODUCT.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
